--- a/css/07_运算符.css
+++ b/css/07_运算符.css
@@ -14,4 +14,8 @@
   width: 30%;
   width: 5px;
   width: 12px;
+  /*============%运算符===============*/
+  width: 0px;
+  width: 2px;
+  width: 2px;
 }/*# sourceMappingURL=07_运算符.css.map */
