--- a/sass/07_运算符.scss
+++ b/sass/07_运算符.scss
@@ -17,4 +17,8 @@
     // /
     width: (10px / 2);
     width: 10px + 2/1;
+    /*============%运算符===============*/
+    width: (10px % 2);
+    width: 50 % 3px;
+    width: 50px % 3px;
 }
